--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "2.0.6",
+    "postcss-svgo": "^2.1.6",
     "promise": "8.0.1",
     "react": "^15.6.1",
     "react-dev-utils": "^3.1.0",
